[gd_scene format=3 uid="uid://cyslwb6wi17bd"]

[ext_resource type="Script" uid="uid://4ndtihsvcllg" path="res://Scripts/DirectorScripts/game_director.gd" id="1_cu1mg"]
[ext_resource type="Script" uid="uid://bk4ulpn65l5uj" path="res://Scripts/DirectorScripts/enemy_spawn_data.gd" id="2_dvpqc"]
[ext_resource type="PackedScene" uid="uid://bd75e2k4dd304" path="res://Scenes/player.tscn" id="2_e0ghr"]
[ext_resource type="Script" uid="uid://dq1xc4ay08qyk" path="res://Scripts/DirectorScripts/map_data.gd" id="3_phja3"]
[ext_resource type="Script" uid="uid://bhyayv3frg2w7" path="res://Scripts/DirectorScripts/decoration_spawn_data.gd" id="4_3vfwh"]

[node name="GameDirector" type="Node" unique_id=410412562]
script = ExtResource("1_cu1mg")
playerScene = ExtResource("2_e0ghr")

[node name="EnemySpawnData" type="Node" parent="." unique_id=28674880]
script = ExtResource("2_dvpqc")
startSpawnCooldown = 1.5
cooldownMultiplierPerLevel = 0.9
startEnemiesPerLevel = 1
enemiesIncreasePerLevel = 5

[node name="Enemies" type="Node" parent="." unique_id=359855840]

[node name="MapData" type="Node" parent="." unique_id=147968695]
script = ExtResource("3_phja3")
gameWidth = 4.0
gameBorderPadding = 2.0
decorationAreaWidth = 30.0

[node name="DecorationSpawnData" type="Node" parent="." unique_id=1915109368]
script = ExtResource("4_3vfwh")
spawnCooldown = 0.25
decorationsPerSpawn = Vector2(4, 10)
pathOffsetRange = 5.0

[node name="Decorations" type="Node" parent="." unique_id=1753323217]
